--- a/app/src/main/res/layout/pingclient.xml
+++ b/app/src/main/res/layout/pingclient.xml
@@ -4,44 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundimage">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="457dp"
+        android:layout_height="56dp"
+        android:background="#D0000000"
+        android:text="Ping Client"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.001" />
 
     <Button
         android:id="@+id/ping_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="288dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="19dp"
-        android:text="start ping"
+        android:layout_width="52dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="24dp"
+        android:background="#D0000000"
+        android:text="start"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ping"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/ping"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="180dp"
+        android:layout_width="265dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="12dp"
+        android:background="#E8000000"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Please enter host address here"
-        android:textColor="#8A000000"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="  Please enter host address here"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toStartOf="@+id/ping_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/ping_results"
-        android:layout_width="394dp"
-        android:layout_height="254dp"
+        android:layout_width="350dp"
+        android:layout_height="422dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="9dp"
+        android:background="#00000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ping_button" />
+        app:layout_constraintTop_toBottomOf="@+id/ping_button">
+
+    </ListView>
+
+    <ImageView
+        android:id="@+id/imageViewhelp"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="Display"
+        android:src="@drawable/home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
