--- a/app/src/main/res/layout/startpage.xml
+++ b/app/src/main/res/layout/startpage.xml
@@ -4,48 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pos_networktoolsuite.MainActivity">
+    android:onClick="Display"
+    android:background="@drawable/backgroundimage">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="411dp"
+        android:layout_height="65dp"
+        android:layout_gravity="center_horizontal"
+        android:background="#D0000000"
         android:text="Network Tool Suite"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/action"
-        android:layout_width="60dp"
-        android:layout_height="201dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="264dp"
-        android:layout_marginBottom="384dp"
-        android:background="#f2f2f0"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="208dp"
+        android:layout_height="306dp"
+        android:background="#DF324A6B"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menuBar" />
 
     <ImageView
         android:id="@+id/menuBar"
-        android:layout_width="75dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="344dp"
-        android:layout_marginBottom="3dp"
-        android:background="#F2F2F0"
+        android:layout_width="64dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="24dp"
+        android:background="#00243E"
+        android:src="@drawable/side_menu"
         app:layout_constraintBottom_toTopOf="@+id/action"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:srcCompat="@drawable/side_menu" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <TextView
+        android:id="@+id/welcomeview"
+        android:layout_width="208dp"
+        android:layout_height="65dp"
+        android:background="#E8000000"
+        android:text="\n Verfügbare Funktionen"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/action"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
