--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/testme">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/host"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -12,7 +13,7 @@
         android:text="IP Address" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -20,7 +21,7 @@
         android:text="username" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/pw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
