--- a/app/src/main/res/layout/sshterminal.xml
+++ b/app/src/main/res/layout/sshterminal.xml
@@ -6,12 +6,23 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgroundimage">
 
+    <ImageView
+        android:id="@+id/imageViewhelp2"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="Display"
+        android:src="@drawable/home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="307dp"
         android:layout_height="55dp"
         android:background="#D0000000"
-        android:text="Terminal"
+        android:text="        Terminal"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -19,7 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/input"
@@ -27,12 +38,16 @@
         android:layout_height="44dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="92dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="28dp"
         android:background="#E8000000"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Command Input"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/terminal"
+        app:layout_constraintEnd_toStartOf="@+id/send"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -43,7 +58,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="38dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginBottom="28dp"
         android:background="#E8000000"
         android:text="send"
         android:textColor="#FFFFFF"
@@ -52,27 +67,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toEndOf="@+id/input"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/connect" />
 
     <TextView
         android:id="@+id/terminal"
         android:layout_width="303dp"
-        android:layout_height="371dp"
+        android:layout_height="383dp"
         android:layout_marginStart="54dp"
-        android:layout_marginBottom="134dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="54dp"
         android:background="#E8000000"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input" />
 
     <Button
         android:id="@+id/connect"
         android:layout_width="104dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="91dp"
         android:background="#E8000000"
         android:text="connect"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/send"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
