--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:onClick="moveText"
         android:text="IP Address" />
 
     <EditText
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:onClick="moveText"
         android:text="username" />
 
     <EditText
@@ -26,5 +28,6 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:onClick="moveText"
         android:text="password" />
 </LinearLayout>
