--- a/app/src/main/res/layout/sshterminal.xml
+++ b/app/src/main/res/layout/sshterminal.xml
@@ -43,9 +43,11 @@
         android:background="#E8000000"
         android:ems="10"
         android:inputType="textPersonName"
+        android:onClick="moveText"
         android:text="Command Input"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/terminal"
         app:layout_constraintEnd_toStartOf="@+id/send"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,10 +89,11 @@
         android:id="@+id/connect"
         android:layout_width="104dp"
         android:layout_height="55dp"
+        android:layout_marginEnd="16dp"
         android:background="#E8000000"
-        android:text="connect"
+        android:text="      connect"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
