--- a/app/src/main/res/layout/portscan.xml
+++ b/app/src/main/res/layout/portscan.xml
@@ -48,6 +48,7 @@
         android:background="#E8000000"
         android:ems="10"
         android:inputType="textPersonName"
+        android:onClick="moveText"
         android:text="  Please enter host address here"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/ps_button"
@@ -56,8 +57,8 @@
 
     <ListView
         android:id="@+id/ps_results"
-        android:layout_width="350dp"
-        android:layout_height="422dp"
+        android:layout_width="351dp"
+        android:layout_height="394dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="9dp"
